packages/flutter_vst3/dart_vst_host/native/include/dart_vst_host.h

typedef void* DVH_Host;
typedef void* DVH_Plugin;
// ── External audio source injection ──────────────────────────────────────────
//
// Allows non-VST3 audio generators (Theremin, Stylophone) to feed audio into
// a VST3 effect plugin's input, bypassing the normal "upstream plugin output"
// mechanism.
//
// The render function has signature:
//   void render(float* outL, float* outR, int32_t frames)
// It is called from the ALSA audio thread — must be allocation-free.
//
// Typical flow:
//   1. Enable capture mode on the native synth (e.g. theremin_set_capture_mode(1))
//      so its miniaudio device outputs silence.
//   2. Call dvh_set_external_render(host, effectPlugin, thereminRenderBlock)
//      so the ALSA loop feeds theremin audio into the effect's input.
//   3. On disconnect: dvh_clear_external_render + theremin_set_capture_mode(0).

typedef void (*DvhRenderFn)(float* outL, float* outR, int32_t frames);
// macOS specific audio device management (CoreAudio/miniaudio)
DVH_API int32_t dvh_mac_start_audio(DVH_Host host);
DVH_API void    dvh_mac_stop_audio(DVH_Host host);
// Parameter unit/group API — for grouping parameters by category.
// Returns the unitId for the parameter at [index]. Returns -1 on failure.
DVH_API int32_t dvh_param_unit_id(DVH_Plugin p, int32_t index);
// Returns the number of declared units (groups) for this plugin.
// Returns 0 if the plugin does not implement IUnitInfo.
DVH_API int32_t dvh_unit_count(DVH_Plugin p);
// Fills [name_out] with the UTF-8 name of the unit whose ID is [unit_id].
// Returns 1 on success, 0 if not found or IUnitInfo not available.
DVH_API int32_t dvh_unit_name(DVH_Plugin p, int32_t unit_id,
                              char* name_out, int32_t name_cap);
// Plugin editor GUI (X11 on Linux, stub on other platforms).
// Open the plugin's native editor in a standalone X11 window.
// title: window title string (may be null).
// Returns the X11 Window ID on success, 0 if the plugin has no GUI.
DVH_API intptr_t dvh_open_editor(DVH_Plugin p, const char* title);
// Close the editor window opened by dvh_open_editor.
DVH_API void     dvh_close_editor(DVH_Plugin p);
// Returns 1 if an editor window is currently open for this plugin.
DVH_API int32_t  dvh_editor_is_open(DVH_Plugin p);
// macOS specific editor (Cocoa/NSWindow)
DVH_API intptr_t dvh_mac_open_editor(DVH_Plugin p, const char* title);
DVH_API void     dvh_mac_close_editor(DVH_Plugin p);
DVH_API int32_t  dvh_mac_editor_is_open(DVH_Plugin p);
// ── GFPA master-insert chain ──────────────────────────────────────────────────
//
// Allows GFPA native DSP effects (reverb, delay, wah, EQ, compressor, chorus)
// to process the output of a master-render contributor before it reaches the
// ALSA mix bus.  Full types are defined in gfpa_dsp.h; the API here uses
// compatible void* / function-pointer types so that dart_vst_host.h has no
// dependency on gfpa_dsp.h.
//
// GfpaInsertFn_fwd matches GfpaInsertFn exactly:
//   void fn(const float*, const float*, float*, float*, int32_t, void*)
typedef void (*GfpaInsertFn_fwd)(const float*, const float*,
                                  float*, float*, int32_t, void*);
/// Register a GFPA insert on [source]'s master-render audio path.
/// [insertFn] is called each ALSA block with the source's dry stereo output;
/// [userdata] is the GfpaDspHandle (obtained from gfpa_dsp_userdata()).
/// Calling again for the same [source] replaces the existing insert.
DVH_API void dvh_add_master_insert(DVH_Host host, DvhRenderFn source,
                                    GfpaInsertFn_fwd insertFn, void* userdata);
/// Remove the GFPA insert registered for [source]. No-op if none registered.
DVH_API void dvh_remove_master_insert(DVH_Host host, DvhRenderFn source);
/// Remove all registered master inserts.
/// Call at the start of each syncAudioRouting() rebuild.
DVH_API void dvh_clear_master_inserts(DVH_Host host);