packages/flutter_vst3/dart_vst_host/lib/src/bindings.dart


  /// Register a GFPA insert on a master-render source.
  /// insertFnPtr and userdata are both Pointer(Void) at the FFI boundary;
  /// the native side casts them back to the correct function pointer types.
  late final void Function(
    Pointer<Void>,
    Pointer<NativeFunction<Void Function(Pointer<Float>, Pointer<Float>, Int32)>>,
    Pointer<Void>,
    Pointer<Void>,
  ) dvhAddMasterInsert = lib.lookupFunction<
      Void Function(
        Pointer<Void>,
        Pointer<NativeFunction<Void Function(Pointer<Float>, Pointer<Float>, Int32)>>,
        Pointer<Void>,
        Pointer<Void>,
      ),
      void Function(
        Pointer<Void>,
        Pointer<NativeFunction<Void Function(Pointer<Float>, Pointer<Float>, Int32)>>,
        Pointer<Void>,
        Pointer<Void>,
      )
  >('dvh_add_master_insert');

  /// Remove the GFPA insert registered for [source].
  late final void Function(
    Pointer<Void>,
    Pointer<NativeFunction<Void Function(Pointer<Float>, Pointer<Float>, Int32)>>,
  ) dvhRemoveMasterInsert = lib.lookupFunction<
      Void Function(
        Pointer<Void>,
        Pointer<NativeFunction<Void Function(Pointer<Float>, Pointer<Float>, Int32)>>,
      ),
      void Function(
        Pointer<Void>,
        Pointer<NativeFunction<Void Function(Pointer<Float>, Pointer<Float>, Int32)>>,
      )
  >('dvh_remove_master_insert');

  /// Remove all registered master inserts.
  late final void Function(Pointer<Void>) dvhClearMasterInserts =
      lib.lookupFunction<
          Void Function(Pointer<Void>),
          void Function(Pointer<Void>)
      >('dvh_clear_master_inserts');

  // macOS specific audio management
  late final int Function(Pointer<Void>) dvhMacStartAudio =
      lib.lookupFunction<Int32 Function(Pointer<Void>), int Function(Pointer<Void>)>('dvh_mac_start_audio');

  late final void Function(Pointer<Void>) dvhMacStopAudio =
      lib.lookupFunction<Void Function(Pointer<Void>), void Function(Pointer<Void>)>('dvh_mac_stop_audio');

  // Parameter unit/group API.
  late final int Function(Pointer<Void>, int) dvhParamUnitId =
      lib.lookupFunction<Int32 Function(Pointer<Void>, Int32),
          int Function(Pointer<Void>, int)>('dvh_param_unit_id');

  late final int Function(Pointer<Void>) dvhUnitCount =
      lib.lookupFunction<Int32 Function(Pointer<Void>),
          int Function(Pointer<Void>)>('dvh_unit_count');

  late final int Function(Pointer<Void>, int, Pointer<Utf8>, int) dvhUnitName =
      lib.lookupFunction<
          Int32 Function(Pointer<Void>, Int32, Pointer<Utf8>, Int32),
          int Function(Pointer<Void>, int, Pointer<Utf8>, int)>('dvh_unit_name');

  // Plugin editor GUI (X11 on Linux, stubs elsewhere).
  late final int Function(Pointer<Void>, Pointer<Utf8>) dvhOpenEditor =
      lib.lookupFunction<
          IntPtr Function(Pointer<Void>, Pointer<Utf8>),
          int Function(Pointer<Void>, Pointer<Utf8>)
      >('dvh_open_editor');

  late final void Function(Pointer<Void>) dvhCloseEditor =
      lib.lookupFunction<
          Void Function(Pointer<Void>),
          void Function(Pointer<Void>)
      >('dvh_close_editor');

  late final int Function(Pointer<Void>) dvhEditorIsOpen =
      lib.lookupFunction<
          Int32 Function(Pointer<Void>),
          int Function(Pointer<Void>)
      >('dvh_editor_is_open');

  // macOS specific editor
  late final int Function(Pointer<Void>, Pointer<Utf8>) dvhMacOpenEditor =
      lib.lookupFunction<IntPtr Function(Pointer<Void>, Pointer<Utf8>), int Function(Pointer<Void>, Pointer<Utf8>)>('dvh_mac_open_editor');

  late final void Function(Pointer<Void>) dvhMacCloseEditor =
      lib.lookupFunction<Void Function(Pointer<Void>), void Function(Pointer<Void>)>('dvh_mac_close_editor');

  late final int Function(Pointer<Void>) dvhMacEditorIsOpen =
      lib.lookupFunction<Int32 Function(Pointer<Void>), int Function(Pointer<Void>)>('dvh_mac_editor_is_open');
}

/// Load the native library. The optional [path] may be used to point
/// directly at libdart_vst_host.{so,dylib,dll}. On platforms where
/// dynamic library lookup is provided by the process/executable, this
/// falls back accordingly.
DynamicLibrary loadDvh({String? path}) {
  if (path != null) return DynamicLibrary.open(path);
  if (Platform.isMacOS) return DynamicLibrary.open('libdart_vst_host.dylib');
  if (Platform.isLinux) return DynamicLibrary.open('libdart_vst_host.so');
  if (Platform.isWindows) return DynamicLibrary.open('dart_vst_host.dll');
  // Use process/executable fallback when available
  try {
    return DynamicLibrary.process();
  } catch (_) {}
  try {
    return DynamicLibrary.executable();
  } catch (_) {}
  throw UnsupportedError('Unable to locate native dart_vst_host library');
}